--- a/web1/Dockerfile
+++ b/web1/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:argon
+FROM node:alpine
 # Create app directory
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -6,5 +6,5 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN npm install
 COPY . /usr/src/app
-EXPOSE 10081
+EXPOSE 30081
 CMD [ "npm", "start" ]
